[package]
name = "wrapper-uuid"
version = "0.1.0"
edition = "2021"
description = "uuid"
authors = ["Pas2Rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/wrapper-uuid"
repository = "https://github.com/pas2rust/wrapper-uuid"
license = "MIT"
exclude = [
    "tests/*",
    "tests",
]

[package.metadata.scripts]
dev = "cargo fmt && cargo clippy && cargo run"
test = "cargo fmt && cargo clippy && cargo test"
deploy = "cargo fmt && cargo clippy && cargo package && cargo publish"
clean = "cargo clean && rm -rf target && rm -rf dist"

[package.metadata.docs.rs]
logo-url = "https://i.imgur.com/svdzGva.jpg"

[dependencies]


[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
path = "src/lib.rs"
